[package]
name = "fdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
quick-xml = { version = "0.30.0", features = ["serialize"] }
reqwest = "0.11.24"
rss = "2.0.7"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
